basic-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
    - image: nginx:1.12
      name: nginx
      ports:
        - containerPort: 80
