my-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
  namespace: my-namespace
spec:
  selector:
    app: my-nginx-app
  ports:
  - port: 80
    targetPort: 8080
